--- a/app/src/main/res/layout/activity_section_f1_s4.xml
+++ b/app/src/main/res/layout/activity_section_f1_s4.xml
@@ -287,7 +287,7 @@
                                 android:tag="f140401"
                                 android:text="@={form.f140401x}"
                                 android:gravity="center"
-                                app:maxValue="2500"
+                                app:maxValue="2499"
                                 app:minValue="1200"
                                 app:type="range" />
 
@@ -341,7 +341,7 @@
                             android:inputType="number"
                             android:maxLength="4"
                             android:text="@={form.f1405}"
-                            app:maxValue="4000"
+                            app:maxValue="2499"
                             app:minValue="1200"
                             app:type="range" />
                     </LinearLayout>
@@ -1238,6 +1238,14 @@
                                 android:checked="@{form.f1417.equals(`5`)}"
                                 android:onClick="@{()->form.setF1417(`5`)}"
                                 android:text="@string/f141705" />
+
+                            <RadioButton
+                                android:id="@+id/f141706"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f1417.equals(`6`)}"
+                                android:onClick="@{()->form.setF1417(`6`)}"
+                                android:text="@string/f141706" />
 
                             <RadioButton
                                 android:id="@+id/f141796"
