--- a/app/src/main/res/layout/activity_section_f2_s3.xml
+++ b/app/src/main/res/layout/activity_section_f2_s3.xml
@@ -218,7 +218,8 @@
                 <!-- f2304  CheckBox   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf2304"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f2303.equals(`1`) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
