--- a/app/src/main/res/layout/activity_section_f3_s6.xml
+++ b/app/src/main/res/layout/activity_section_f3_s6.xml
@@ -596,9 +596,10 @@
                 <!-- f3609  Radio   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3609"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="@{form.f3607.equals(`1`) ? View.VISIBLE : View.GONE}">
 
-                    <LinearLayout
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -768,7 +769,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVf3612"
                     style="@style/cardView"
-                    android:visibility="@{form.f3610.equals(`1`) ? View.VISIBLE : View.GONE}">
+                    android:visibility="@{form.f3610.equals(`2`) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
