--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -72,6 +72,79 @@
                         android:layout_margin="20dp"
                         android:orientation="vertical">
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.6"
+                            android:padding="4dp"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="12dp"
+                            android:text="Old Password"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <EditText
+                                android:id="@+id/passwordOld"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_weight="8"
+                                android:background="@color/white"
+                                android:drawableStart="@drawable/ic_lock_close"
+                                android:drawablePadding="8dp"
+                                android:elevation="1dp"
+                                android:hint="@string/newPassword"
+                                android:imeActionLabel="Password"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType="textPassword"
+                                android:maxLines="1"
+                                android:minWidth="280dp"
+                                android:paddingStart="12dp"
+                                android:paddingTop="8dp"
+                                android:paddingEnd="12dp"
+                                android:paddingBottom="8dp"
+                                android:radius="2dp"
+                                android:singleLine="true"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="18sp" />
+
+                            <ImageButton
+                                android:id="@+id/showPasswordOld"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/login_eyestyle"
+                                android:onClick="onShowPasswordClick"
+                                android:paddingStart="12dp"
+                                android:paddingEnd="12dp"
+                                android:src="@drawable/ic_login_eye"
+                                android:textSize="20sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:alpha="0.6"
+                                android:padding="4dp"
+                                android:paddingStart="16dp"
+                                android:paddingEnd="12dp"
+                                android:text="New Password"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -88,7 +161,7 @@
                                 android:drawableStart="@drawable/ic_lock_close"
                                 android:drawablePadding="8dp"
                                 android:elevation="1dp"
-                                android:hint="@string/password"
+                                android:hint="@string/newPassword"
                                 android:imeActionLabel="Password"
                                 android:imeOptions="actionUnspecified"
                                 android:inputType="textPassword"
@@ -124,18 +197,20 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="16dp"
                                 android:alpha="0.6"
                                 android:padding="4dp"
                                 android:paddingStart="16dp"
                                 android:paddingEnd="12dp"
-                                android:text="- Passwords should be at least 8 characters long.
-                                        \n- Passwords should contain both alphabets and numbers." />
+                                android:text="Confirm New Password"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
                             android:orientation="horizontal">
 
                             <EditText
@@ -183,7 +258,9 @@
                             android:padding="4dp"
                             android:paddingStart="16dp"
                             android:paddingEnd="12dp"
-                            android:text="Both passwords must match." />
+                            android:text="Both passwords must match."
+                            android:textAppearance="?attr/textAppearanceCaption"
+                            android:textColor="?attr/colorOnSurface" />
                         <!--               <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
@@ -289,7 +366,7 @@
                                 style="@style/quesNum"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:text="@string/Q_b117" />
+                                android:text="@string/Qb117" />
 
                             <TextView
                                 android:layout_width="match_parent"
