--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,6 +107,7 @@
 
                                 <EditText
                                     android:id="@+id/username"
+                                    android:longClickable="false"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center_horizontal"
@@ -137,6 +138,7 @@
 
                                     <EditText
                                         android:id="@+id/password"
+                                        android:longClickable="false"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center_horizontal"
