Fixed password reset error

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -260,7 +260,7 @@
                             android:paddingEnd="12dp"
                             android:text="Both passwords must match."
                             android:textAppearance="?attr/textAppearanceCaption"
-                            android:textColor="?attr/colorOnSurface" />
+                            android:textColor="@color/grayDark" />
                         <!--               <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
