--- a/app/src/main/res/layout/activity_section_f3_s1.xml
+++ b/app/src/main/res/layout/activity_section_f3_s1.xml
@@ -302,7 +302,7 @@
                             android:id="@+id/f3104"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
+                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789"
                             android:hint="@string/f3104"
                             android:text="@={form.f3104}" />
                     </LinearLayout>
